; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lmgr.c_ConditionalLockRelationOid.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lmgr.c_ConditionalLockRelationOid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCKACQUIRE_NOT_AVAIL = common dso_local global i64 0, align 8
@LOCKACQUIRE_ALREADY_CLEAR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ConditionalLockRelationOid(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @SetLocktagRelationOid(i32* %6, i32 %9)
  %11 = load i32, i32* %5, align 4
  %12 = call i64 @LockAcquireExtended(i32* %6, i32 %11, i32 0, i32 1, i32 1, i32** %7)
  store i64 %12, i64* %8, align 8
  %13 = load i64, i64* %8, align 8
  %14 = load i64, i64* @LOCKACQUIRE_NOT_AVAIL, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

17:                                               ; preds = %2
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* @LOCKACQUIRE_ALREADY_CLEAR, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %25

21:                                               ; preds = %17
  %22 = call i32 (...) @AcceptInvalidationMessages()
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @MarkLockClear(i32* %23)
  br label %25

25:                                               ; preds = %21, %17
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %16
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @SetLocktagRelationOid(i32*, i32) #1

declare dso_local i64 @LockAcquireExtended(i32*, i32, i32, i32, i32, i32**) #1

declare dso_local i32 @AcceptInvalidationMessages(...) #1

declare dso_local i32 @MarkLockClear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
